tests/typing/error-poly/test-par.expected
File "tests/typing/error-poly/test-par.psmt2", line 11, character 38-67:
Error The term: cons(int; 1, nil(int)) has type list(int)
      but was expected to be of type list(a)
