tests/typing/error-poly/test-par.psmt2
(set-logic ALL)
(set-info :smt-lib-version 2.6)

(declare-sort list 1)

(declare-fun cons (par (a) (a (list a)) (list a)))
(declare-fun nil (par (a) () (list a)))

(define-fun singleton (par (a) ((x a)) (list a) (cons x nil)))

(assert (par (a) (forall ((x a)) (not (= (cons x nil) (cons 1 nil))))))

(check-sat)
